applications/monitor-scale/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-scale
  labels:
    app: monitor-scale
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: monitor-scale
    tier: monitor-scale
  # type: NodePort
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-scale
  labels:
    app: monitor-scale
spec:
  selector:
    matchLabels:
      app: monitor-scale
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monitor-scale
        tier: monitor-scale
    spec:
      containers:
      # - image: 127.0.0.1:30400/monitor-scale:latest
      - image: 127.0.0.1:30400/monitor-scale:5a62ffe
        name: monitor-scale
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: monitor-scale
      - image: zappi/kubectl:latest
        name: kubectl-api
        args: ["proxy","-p","2345"]
        ports:
        - containerPort: 2345
          name: kubectl-api          

---
# apiVersion: apps/v1
# kind: Ingress
# metadata:
#  name: monitor-scale
#  annotations:
#   ingress.kubernetes.io/rewrite-target: /
# spec:
#   backend:
#     serviceName: monitor-scale
#     servicePort: 3001
#   rules:
#   - host: monitor-scale.192.168.99.100.xip.io
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: monitor-scale
#           servicePort: 3001

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-scale
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: monitor-scale
      port:
        number: 3001
  rules:
  - host: monitor-scale.192.168.49.2.xip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitor-scale
            port:
              number: 3001
